--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "exercices about es6",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "@types/lodash": "^4.14.120",
+    "@types/node": "^10.12.18",
+    "lodash": "^4.17.11"
+  },
   "devDependencies": {
     "http-server": "^0.11.1"
   },
