--- a/package.json
+++ b/package.json
@@ -6,14 +6,23 @@
   "dependencies": {
     "@types/lodash": "^4.14.120",
     "@types/node": "^10.12.18",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "pg": "^7.8.0",
+    "sequelize": "^4.42.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-lines-between-class-members": "^1.3.1"
   },
   "devDependencies": {
-    "http-server": "^0.11.1"
+    "@types/sequelize": "^4.27.34",
+    "http-server": "^0.11.1",
+    "ts-node": "^8.0.2",
+    "tslint": "^5.12.1",
+    "typescript": "^3.2.4"
   },
   "scripts": {
     "es6": "./node_modules/.bin/http-server -cl .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./node_modules/.bin/ts-node ./server/server.ts"
   },
   "repository": {
     "type": "git",
